--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
   background-color: #f4f5fd;
   min-height: 100vh;
 }
-
 .left-box{
   width: 26vw;
   height: 100vh;
@@ -145,9 +144,14 @@ body {
   color: #333996;
   padding: 10px 20px;
 }
+.table__button{
+  color: #333996;
+  font-size: 14px;
+  font-weight: 500;
+}
 
 .table__btns{
-  font-weight: 500;
+  font-weight: 600;
   color: #333996;
 }
 
@@ -238,7 +242,10 @@ tr td{
   background-color: #f4f5fd;
 }
 
+td{
+  cursor: pointer;
+}
+
 .edit-wrapper{
   padding: 0 0 !important;
 }
-
